; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_ginfast.c_makeSublist.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_ginfast.c_makeSublist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i8*, i8* }

@InvalidBuffer = common dso_local global i64 0, align 8
@GinListPageSize = common dso_local global i32 0, align 4
@InvalidBlockNumber = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32, %struct.TYPE_3__*)* @makeSublist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @makeSublist(i32 %0, i32* %1, i32 %2, %struct.TYPE_3__* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %8, align 8
  %15 = load i64, i64* @InvalidBuffer, align 8
  store i64 %15, i64* %9, align 8
  %16 = load i64, i64* @InvalidBuffer, align 8
  store i64 %16, i64* %10, align 8
  store i32 0, i32* %12, align 4
  store i32 0, i32* %14, align 4
  %17 = load i32, i32* %7, align 4
  %18 = icmp sgt i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @Assert(i32 %19)
  store i32 0, i32* %11, align 4
  br label %21

21:                                               ; preds = %85, %4
  %22 = load i32, i32* %11, align 4
  %23 = load i32, i32* %7, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %88

25:                                               ; preds = %21
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* @InvalidBuffer, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %60

29:                                               ; preds = %25
  %30 = load i32, i32* %5, align 4
  %31 = call i64 @GinNewBuffer(i32 %30)
  store i64 %31, i64* %9, align 8
  %32 = load i64, i64* %10, align 8
  %33 = load i64, i64* @InvalidBuffer, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %52

35:                                               ; preds = %29
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %37, align 4
  %40 = load i32, i32* %5, align 4
  %41 = load i64, i64* %10, align 8
  %42 = load i32*, i32** %6, align 8
  %43 = load i32, i32* %14, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %42, i64 %44
  %46 = load i32, i32* %11, align 4
  %47 = load i32, i32* %14, align 4
  %48 = sub nsw i32 %46, %47
  %49 = load i64, i64* %9, align 8
  %50 = call i8* @BufferGetBlockNumber(i64 %49)
  %51 = call i32 @writeListPage(i32 %40, i64 %41, i32* %45, i32 %48, i8* %50)
  br label %57

52:                                               ; preds = %29
  %53 = load i64, i64* %9, align 8
  %54 = call i8* @BufferGetBlockNumber(i64 %53)
  %55 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %56 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %55, i32 0, i32 4
  store i8* %54, i8** %56, align 8
  br label %57

57:                                               ; preds = %52, %35
  %58 = load i64, i64* %9, align 8
  store i64 %58, i64* %10, align 8
  %59 = load i32, i32* %11, align 4
  store i32 %59, i32* %14, align 4
  store i32 0, i32* %12, align 4
  br label %60

60:                                               ; preds = %57, %25
  %61 = load i32*, i32** %6, align 8
  %62 = load i32, i32* %11, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i32, i32* %61, i64 %63
  %65 = load i32, i32* %64, align 4
  %66 = call i32 @IndexTupleSize(i32 %65)
  %67 = call i32 @MAXALIGN(i32 %66)
  %68 = sext i32 %67 to i64
  %69 = add i64 %68, 4
  %70 = trunc i64 %69 to i32
  store i32 %70, i32* %13, align 4
  %71 = load i32, i32* %12, align 4
  %72 = load i32, i32* %13, align 4
  %73 = add nsw i32 %71, %72
  %74 = load i32, i32* @GinListPageSize, align 4
  %75 = icmp sgt i32 %73, %74
  br i1 %75, label %76, label %80

76:                                               ; preds = %60
  %77 = load i32, i32* %11, align 4
  %78 = add nsw i32 %77, -1
  store i32 %78, i32* %11, align 4
  %79 = load i64, i64* @InvalidBuffer, align 8
  store i64 %79, i64* %9, align 8
  br label %84

80:                                               ; preds = %60
  %81 = load i32, i32* %13, align 4
  %82 = load i32, i32* %12, align 4
  %83 = add nsw i32 %82, %81
  store i32 %83, i32* %12, align 4
  br label %84

84:                                               ; preds = %80, %76
  br label %85

85:                                               ; preds = %84
  %86 = load i32, i32* %11, align 4
  %87 = add nsw i32 %86, 1
  store i32 %87, i32* %11, align 4
  br label %21

88:                                               ; preds = %21
  %89 = load i64, i64* %9, align 8
  %90 = call i8* @BufferGetBlockNumber(i64 %89)
  %91 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %92 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %91, i32 0, i32 3
  store i8* %90, i8** %92, align 8
  %93 = load i32, i32* %5, align 4
  %94 = load i64, i64* %9, align 8
  %95 = load i32*, i32** %6, align 8
  %96 = load i32, i32* %14, align 4
  %97 = sext i32 %96 to i64
  %98 = getelementptr inbounds i32, i32* %95, i64 %97
  %99 = load i32, i32* %7, align 4
  %100 = load i32, i32* %14, align 4
  %101 = sub nsw i32 %99, %100
  %102 = load i8*, i8** @InvalidBlockNumber, align 8
  %103 = call i32 @writeListPage(i32 %93, i64 %94, i32* %98, i32 %101, i8* %102)
  %104 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %105 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %104, i32 0, i32 2
  store i32 %103, i32* %105, align 8
  %106 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %107 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %106, i32 0, i32 1
  %108 = load i32, i32* %107, align 4
  %109 = add nsw i32 %108, 1
  store i32 %109, i32* %107, align 4
  %110 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %111 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %110, i32 0, i32 0
  store i32 1, i32* %111, align 8
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i64 @GinNewBuffer(i32) #1

declare dso_local i32 @writeListPage(i32, i64, i32*, i32, i8*) #1

declare dso_local i8* @BufferGetBlockNumber(i64) #1

declare dso_local i32 @MAXALIGN(i32) #1

declare dso_local i32 @IndexTupleSize(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
